Refactored the event service